Created PageDTO for common page elements in pagination and add category page dto to display categories paginated